Fixed a bug in the banner view that caused it to never display multiple shifts on the same day and modified the CSS to be more like Banner

--- a/css/banner.css
+++ b/css/banner.css
@@ -1,4 +1,15 @@
 th, td {
-min-width:150px;
+min-width:60px;
+max-width:70px;
+font-family:"monospace";
+font-size:12px;
+vertical-align:top;
+}
+
+th {
 text-align:center;
+}
+
+td {
+text-align:right;
 }
